[tool.poetry]
name = "networks-course"
version = "0.1.0"
description = ""
authors = ["reas <reas.qf0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
python-multipart = "^0.0.22"
uvicorn = "^0.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
